<resources>
    <string name="app_name">FlatSharing</string>

    <!-- NavigationDrawer -->
    <string name="action_settings">Ajustes</string>
    <string name="action_groups">Grupos</string>
    <string name="add_group_title">Nombre</string>
    <string name="add_group_description">Descripción</string>
    <string name="add_group_members">Miembros</string>
    <string name="add_group_add_member_hint">Añade un miembro...</string>
    <string name="action_done">Listo</string>
    <string name="error_add_group_title_empty">Introduce un nombre</string>
    <string name="group_added_successfully">Grupo añadido con éxito</string>
    <string name="context_add_group_gallery">Desde la galería</string>
    <string name="add_group_camera">Desde la cámara</string>
    <string name="we_need_camera_permission">Necesitamos que nos des permisos para usar la cámara</string>
    <string name="retry">Reintentar</string>
    <string name="add_group_toolbar_title">Añadir grupo</string>
    <string name="we_need_file_permission">Necesitamos acceder a la imagen para que puedas usarla en el grupo</string>
    <string name="select_any_picture">Selecciona una imagen</string>
    <string name="add_group_error_adding_image">Ha habido un error al obtener la imagen</string>
    <string name="context_add_group_default_picture">Eliminar imagen</string>
    <string name="action_add_group">Añadir grupo</string>
    <string name="title_activity_group_detail">GroupDetailActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_leave_group">Dejar grupo</string>

    <string name="detail_tab_section_economy">Cuentas</string>
    <string name="detail_tab_section_tasks">Tareas</string>
    <string name="detail_tab_section_list">Listas</string>
    <string name="action_activity">Actividad</string>
    <string name="drawer_group_detail_activity">Actividad</string>
    <string name="open">Abrir</string>
    <string name="close">Cerrar</string>

    <string name="economy_activity_singular_payment_title">%1$s pagó %2$d€</string>
    <string name="economy_activity_plural_payment_title">%1$s pagaron %2$d€</string>
    <string name="economy_activity_payment_to">Para: %1$s</string>
    <string name="title_activity_task_list_detail">TaskListDetailActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_transaction_subtitle_who_pays">¿Quién pagó? *</string>
    <string name="add_transaction_subtitle_how_much">¿Cuánto pagó? *</string>
    <string name="add_transaction_subtitle_payment_for">¿Para quién? *</string>
    <string name="symbol_eur">€</string>
    <string name="transaction_added_successfully">Cuenta añadida con éxito</string>
    <string name="action_save">Guardar</string>
    <string name="add_transaction_toolbar_title">Añadir cuenta</string>
    <string name="add_transaction_subject">Concepto</string>
    <string name="add_transaction_subtitle_subject">Concepto</string>
    <string name="dialog_leave_group_title">¿Estás seguro de salir del grupo?</string>
    <string name="dialog_leave_group_description">No podrás volver a entrar si sales.</string>
    <string name="decline">No</string>
    <string name="agree">Sí</string>
</resources>
